--- a/app/views/stripe_payments/index.html.erb
+++ b/app/views/stripe_payments/index.html.erb
@@ -29,7 +29,7 @@
   	<table class="table table-striped">
     <thead>
       <tr>
-      	<th>Sr.no</th>
+      	<th>#</th>
         <th>Email</th>
         <th>Amount</th>
         <th>Date</th>
@@ -38,7 +38,7 @@
     <tbody>
     	<% @payments.each_with_index do |payment, index| %>
 	      <tr>
-	        <td><%= index %></td>
+	        <td><%= index + 1 %></td>
 	        <td><%= payment.user.email %></td>
 	        <td><%= payment.amount %></td>
 	        <td><%= payment.created_at.strftime("%d %b %Y")%></td>
